@@ -4,6 +4,7 @@
 
 == rufus-doric - 0.1.9    not yet released
 
+- raising ActiveRecord::RecordInvalid if _id is missing or ''
 - view, as shortcut for view_by
 
 
